package Client;

import Entity.Application;

public class Main {
    public static void main(String[] args) {
        Application streaming = new Application();
        streaming.launchApplication();
    }
}
