package Entity;

import java.util.HashSet;
import java.util.List;
import java.util.Set;

public class Movie {

    Set<Movie>  movieSet = new HashSet<>();

public Movie(List<String> movies ){

}


}
