@startuml
'https://plantuml.com/class-diagram
!pragma layout smetana

class Main
class App
class User
class UI
class IO
class Series
class Movie
abstract Media

Main *-- App
App *-- User
App *-- UI
App *-- IO
App *-- Media
Media <|-- Movie
Media <|-- Series

App : - Set<Media> media
App : + startMenu()
App : + mainMenu()

@enduml